// https://dbdiagram.io/d/wable-64888412722eb77494e48e6a
// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Project project_name {
  database_type: 'MySQL'
  Note: 'Description of the project'
}

Table users {
  id int [primary key]
  gender varchar
  name varchar [not null, unique]
  nickname string [not null, unique]
  birth date
  profile_image_url varchar
  created_at timestamp
  updated_at timestamp
}

Table profiles {
  id int [primary key]
  user_id int [ref: > users.id]
  group_id int [ref: > groups.id]
  nickname varchar
  profile_image_url varchar
  descriptions varchar
  created_at timestamp
  updated_at timestamp
}

Table profile_questions {
  id int [primary key]
  profile_id int [ref: > profiles.id]
  sid questionName
  question varchar
  question_type questionType
  answers varchar
  created_at timestamp
  updated_at timestamp
}

Table groups {
  id int [primary key]
  name varchar // 그룹명
  owner_id int [ref: > users.id]
  created_at timestamp
  updated_at timestamp
}

Table user_groups {
  id int [primary key]
  user_id int [ref: > users.id]
  group_id int [ref: > groups.id]
  position varchar
  created_at timestamp
  updated_at timestamp
}

Table cards {
  id int [primary key]
  sid cardName
  from_user_id int [ref: > users.id]
  from_user_name varchar
  to_user_id int [ref: > users.id]
  to_user_name varchar
  group_id int [ref: > groups.id]
  content varchar
  is_visible bool
  created_at timestamp
  updated_at timestamp
}

enum cardName {
  "GREETING"
  "CELEBRATION"
  "ENCOURAGEMENT"
  "GRATITUDE"
}

Table group_questions {
  id int [primary key]
  group_id int  [ref: > groups.id]
  question_id int [ref: > questions.id]
  Note: "그룹들이 필수로 받고 싶은 질문 항목"
}

Table questions {
  id int [primary key]
  sid questionName
  question varchar
  question_type questionType
  selections varchar [Note: "선택지 리스트"]
  created_at timestamp
  updated_at timestamp
}

enum questionType {
  "OPEN_ENDED"
  "MULTIPLE_CHOICE"
}

enum questionName {
  "MBTI"
  "HOBBY"
  "CUSTOM"
}
